--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "websocket-stream",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "license": "BSD-2-Clause",
   "description": "Use websockets with the node streams API. Works in browser and node",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/rrrhys/websocket-stream.git"
+    "url": "git+ssh://git@github.com/conganwoz/websocket-stream.git"
   },
   "keywords": [
     "websocket",
@@ -43,9 +43,9 @@
     "ws": "./ws-fallback.js"
   },
   "bugs": {
-    "url": "https://github.com/rrrhys/websocket-stream/issues"
+    "url": "https://github.com/conganwoz/websocket-stream/issues"
   },
-  "homepage": "https://github.com/rrrhys/websocket-stream#readme",
+  "homepage": "https://github.com/conganwoz/websocket-stream#readme",
   "main": "index.js",
-  "author": "Original code is Max Ogden."
+  "author": "JenJi"
 }
